<resources>
    <string name="app_name">MunoApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Storage">Storage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="proyectos">Proyectos</string>
    <string name="mensajes">Mensajes</string>
</resources>