<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <item
        android:id="@+id/navigation_tareas"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_proyecto"
        android:icon="@drawable/proyectos"
        android:title="@string/proyectos" />

    <item
        android:id="@+id/navigation_mensaje"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/mensajes" />

    <item
        android:id="@+id/navigation_notificacion"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_almacenamiento"
        android:icon="@drawable/ic_almacenamiento"
        android:title="@string/title_Storage" />


</menu>